--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,30 +1,21 @@
 <!DOCTYPE html>
 <html>
-
-  {% include head.html %}
-
-  <body>
-
+    {% include head.html %}
+    <body id="page-top" class="index">
+    {% include nav.html %}
     {% include header.html %}
+    {% include portfolio_grid.html %}
+    {% include about.html %}
 
-{% if page.cover %}
-  <div class="blog-cover" style="background-image:url({{page.cover}});">
-{% else %}
-  <div class="blog-cover" style="background-image:url(http://app-beacon.com/wp-content/uploads/2015/05/events.jpg);">
-{% endif %}
-  </div>
-  {% if page.cover_credit %}
-    <span class="blog-cover-credit">Credit: Mother</span>
-  {% endif %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
+    {% if site.contact == "static" %}
+    {% include contact_static.html %}
+    {% elsif site.contact == "disqus" %}
+    {% include contact_disqus.html %}
+    {% else %}
+    {% include contact.html %}
+    {% endif %}
 
     {% include footer.html %}
-
-  </body>
-
+    {% include js.html %}
+    </body>
 </html>
