--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -11,13 +11,13 @@
             <div class="row">
                 {% for post in site.posts %}
                     <div class="col-sm-4 portfolio-item">
-                        <a href="{{ post.url }}" class="portfolio-link" data-toggle="modal">
+                        <a href="{{site.baseurl}}/{{ post.url }}" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
                                 <div class="caption-content">
                                     <i class="fa fa-search-plus fa-3x"></i>
                                 </div>
                             </div>
-                            <img src="img/projects/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
+                            <img src="{{site.baseurl}}/img/projects/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
                         </a>
                     </div>
                 {% endfor %}
