--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,20 +9,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/#page-top">{{ site.title }}</a>
+                <a class="navbar-brand" href="{{site.baseurl}}/#page-top">{{ site.title }}</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
-                        <a href="/#page-top"></a>
+                        <a href="{{site.baseurl}}/#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/#portfolio">Les projets</a>
+                        <a href="{{site.baseurl}}/#portfolio">Les projets</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/#about">About</a>
+                        <a href="{{site.baseurl}}/#about">About</a>
                     </li>
                 </ul>
             </div>
