--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -11,7 +11,7 @@
             <div class="row">
                 {% for post in site.posts %}
                     <div class="col-sm-4 portfolio-item">
-                        <a href="{{site.baseurl}}/{{ post.url }}" class="portfolio-link" data-toggle="modal">
+                        <a href="{{site.baseurl}}{{ post.url }}" class="portfolio-link" data-toggle="modal">
                             <div class="caption">
                                 <div class="caption-content">
                                     <i class="fa fa-search-plus fa-3x"></i>
