--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -25,7 +25,95 @@
         </li>
     </ul>
 </div>
+<hr class="star-primary">
+
+{% assign comments = site.data.comments[page.slug] %}
+<div class="container">
+    <div class="row">
+        <div class="col-sm-10 col-sm-offset-1">
+            <div class="page-header">
+                <h3 class="reviews">Votez ou laisser un commentaire!</h3>
+            </div>
+            <div class="comment-tabs">
+                <ul class="nav nav-tabs" role="tablist">
+                    <li class="active"><a href="#comments-logout" role="tab" data-toggle="tab"><h4 class="reviews text-capitalize">Comments</h4></a></li>
+                    <li><a href="#add-comment" role="tab" data-toggle="tab"><h4 class="reviews text-capitalize">Add comment</h4></a></li>
+                </ul>
+                <div class="tab-content">
+                    <div class="tab-pane active" id="comments-logout">
+                        <ul class="media-list">
+                            {% for comment in comments %}
+                            {% assign email = comment[1].email %}
+                            {% assign name = comment[1].name %}
+                            {% assign rating = comment[1].rating %}
+                            {% assign date = comment[1].date %}
+                            {% assign message = comment[1].message %}
+                            {% include comment.html index=forloop.index email=email name=name rating=rating date=date message=message %}
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    <div class="tab-pane" id="add-comment">
+                        <form action="https://api.staticman.net/v2/entry/stephaneLeroy/rejethons-starter/master/comments" method="post" class="form-horizontal" id="commentForm" role="form">
+                            <input name="options[redirect]" type="hidden" value="{{site.url}}{{site.baseurl}}{{page.url}}">
+                            <input name="options[slug]" type="hidden" value="{{ page.slug }}">
+                            <div class="form-group">
+                                <label for="name" class="col-sm-2 control-label">Name</label>
+                                <div class="col-sm-10">
+                                    <input class="form-control" name="fields[name]" id="name" type="text">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="message" class="col-sm-2 control-label">Email</label>
+                                <div class="col-sm-10">
+                                    <input class="form-control" name="fields[email]" id="email" type="email">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Vote</label>
+                                <span class="rating">
+                                    <label class="radio-inline">
+                                        <input type="radio" name="fields[rating]" value="5" title="5 stars"> 5
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="fields[rating]" value="4" title="4 stars"> 4
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="fields[rating]" value="3" title="3 stars"> 3
+                                    </label>
+                                    <label class="radio-inline" >
+                                        <input type="radio" name="fields[rating]" value="2" title="2 stars"> 2
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="fields[rating]" value="1" title="1 star"> 1
+                                    </label>
+                                </span>
+                            </div>
+                            <div class="form-group">
+                                <label for="message" class="col-sm-2 control-label">Message</label>
+                                <div class="col-sm-10">
+                                    <textarea class="form-control" name="fields[message]" id="message" rows="5"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-offset-2 col-sm-10">
+                                    <button class="btn btn-success btn-circle text-uppercase" type="submit" id="submitComment"><span class="fa fa-send"></span> Summit comment</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% include footer.html %}
 {% include js.html %}
+<script>
+  $('.rating input').change(function () {
+    var $radio = $(this);
+    $('.rating .selected').removeClass('selected');
+    $radio.closest('label').addClass('selected');
+  });
+</script>
 </body>
 </html>
