Add comment form validation Some refactoring on layouts Youtube vs Image header on projects pages Add Edit menu item to link github file

--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -8,7 +8,9 @@
             <p class="media-comment">
                 {{ message }}
             </p>
-            <a class="btn btn-warning btn-circle text-uppercase">{{ rating }} <span class="fa fa-star"></span></a>
+            {% if rating %}
+                <a class="btn btn-warning btn-circle text-uppercase">{{ rating }} <span class="fa fa-star"></span></a>
+            {% endif %}
         </div>
     </div>
 </li>
