--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -396,6 +396,6 @@ footer .footer-below {
     -webkit-transform: translateZ(0);
 }
 
-.container.project-body {
+.container.page-body {
     margin-top: 8em;
 }
