--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="{{ site.baseurl }}/img/rejethons.png" alt="">
+                    <img class="img-responsive" width="600" src="{{ site.baseurl }}/img/rejethons.png" alt="Les rejethons!">
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
                         <hr class="star-light">
                         <span class="skills">{{ site.skills }}</span>
+                    </div>
+                    <div class="col-lg-8 col-lg-offset-2 text-center">
+                        <a href="{{site.baseurl}}/sujet/" class="btn btn-lg btn-outline">
+                            <i class="fa fa-play"></i> Le sujet
+                        </a>
+                        <a href="{{site.baseurl}}/sujet/help/" class="btn btn-lg btn-outline">
+                            <i class="fa fa-support"></i> Besoin d'aide?
+                        </a>
                     </div>
                 </div>
             </div>
