--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -3,7 +3,7 @@
         <div class="well well-lg">
             <h4 class="media-heading text-uppercase reviews">{{ name }} </h4>
             <ul class="media-date text-uppercase reviews list-inline">
-                {{ date }}
+                {{ date | date: "%d %h %Y @ %Hh%M"}}
             </ul>
             <p class="media-comment">
                 {{ message }}
