Add some style on score badges

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -245,6 +245,13 @@ section.success {
     z-index: 2;
 }
 
+#portfolio .portfolio-item .badge {
+    position: relative;
+    padding: 7px;
+    bottom: -10px;
+    z-index: 10;
+}
+
 @media(min-width:767px) {
     #portfolio .portfolio-item {
         margin: 0 0 30px;
