Add some help content and fix a little of markdown style (remain some work)

--- a/_includes/css/comments.css
+++ b/_includes/css/comments.css
@@ -2,6 +2,9 @@
     Image credits:
     uifaces.com (http://uifaces.com/authorized)
 */
+#comments {
+    padding: 10px;
+}
 .page-header { position: relative; }
 .reviews {
     color: #555;
