--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,6 @@
 ---
 layout: default
 ---
-<div class="container page-body">
+<div class="container page-body markdown-body">
 {{ content }}
 </div>
