Add site tour on first visit Prepare team project posts Upgrade Bootstrap version to 3.2.0 (flaty template) Refacto layout

--- a/_includes/comments-score.html
+++ b/_includes/comments-score.html
@@ -9,4 +9,4 @@
 {% if count != 0 and total != 0 %}
     {% assign total = total | divided_by: count %}
 {% endif %}
-<a href="{{link}}" class="badge">Score : {{ total }}<span class="fa fa-star"></span></a>
+<a href="{{link}}" class="badge" id="{{id}}">Score : {{ total }}<span class="fa fa-star"></span></a>
