--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,6 +21,9 @@
                     <li id="navProjects" class="page-scroll">
                         <a href="{{site.baseurl}}/#portfolio">Les projets</a>
                     </li>
+                    <li id="navClassement">
+                        <a href="{{site.baseurl}}/#ranking">Le classement</a>
+                    </li>
                     <li id="navSubject">
                         <a href="{{site.baseurl}}/sujet/">Le sujet</a>
                     </li>
