--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -3,6 +3,7 @@
         <div class="col-sm-10 col-sm-offset-1">
             <div class="page-header">
                 <h3 class="reviews">Votez ou laisser un commentaire!</h3>
+                <p>Attentions! Seuls les votes dont le nom/prenom est identifiable seront comptabilises</p>
                 {% assign link = "#comments" %}
                 {% include comments-score.html comments=comments link=link %}
             </div>
